--- a/popup.html
+++ b/popup.html
@@ -254,7 +254,7 @@
     </div>
     <input type="button" value="Cancel" id="cancel">
 </div>
-      <script src="./popup.js"></script>
+      <script src="./src/popup.js"></script>
   </body>
 
 </html>
