--- a/popup.html
+++ b/popup.html
@@ -227,7 +227,7 @@
 
       <select id='endTimerOption'>
         <option selected value=0>
-          Current Tab
+          Close Current Tab
         </option>
 
         <option value=1>
@@ -235,7 +235,7 @@
         </option>
 
         <option value=2>
-          All Tabs
+          Close All Tabs
         </option>
       </select>
       <br/>      <br/>
